# Firefly

./: .gitignore  CMakeLists.txt  ReadMe.md  test.xml
Scenes/: Dielectrics.xml  Example.XML  Lamberts.xml  Materials.xml  Metals.xml
include/: Camera.h  ColourRGBA.h  Exporter.h  HitResult.h  Image.h  Interval.h  Material.h  MathHelper.h  Object.h  Progressbar.h  RNG.h  Ray3D.h  RayTracer.h  Renderable.h  Sphere.h  Timer.h  Utilities.h  Vector3.h  Viewport.h  World.h
include/Materials/: Dielectric.h  Glass.h  Lambert.h  Metal.h
include/Objects/: Sphere.h
include/Viewer/: Engine.h  Viewer.h  VkHelpers.h  Window.h
src/: ColourRGBA.cpp  Exporter.cpp  RayTracer.cpp  World.cpp  main.cpp
src/Viewer/: Engine.cpp  Viewer.cpp  VkHelpers.cpp  Window.cpp
